# RustyStar

./: Cargo.toml  README.md  bundle.nu
.github/workflows/: build.yaml
listen-new-proc/: Cargo.toml
listen-new-proc/src/: listen.rs
rustystar/: Cargo.toml  build.rs
rustystar/src/: auto_launch.rs  lib.rs  main.rs  tray.rs
rustystar/src/bypass/: mod.rs
rustystar/src/config/: merge.rs  mod.rs
rustystar/src/events/: mod.rs
rustystar/src/logging/: mod.rs
rustystar/src/privilege/: mod.rs
rustystar/src/utils/: mod.rs
rustystar/src/utils/proc_tree/: mod.rs
rustystar/wix/: main.wxs
src/: lib.rs  main.rs
src/bypass/: mod.rs
src/config/: mod.rs
src/events/: mod.rs
src/logging/: mod.rs
src/privilege/: mod.rs
src/utils/: mod.rs
src/utils/proc_tree/: mod.rs
win32-ecoqos/: Cargo.toml
win32-ecoqos/benches/: bench.rs
win32-ecoqos/examples/: retrieve_thread.rs
win32-ecoqos/src/: lib.rs  process.rs  thread.rs
win32-ecoqos/src/utils/: process.rs  thread.rs
win32-ecoqos/tests/: find_thread.rs
wix/: License.rtf  main.wxs
