[package]
name = "rustystar"
version = "0.1.0"
edition = "2024"
description = "EcoQoS throtting tool."

[dependencies]
ahash = "0.8.11"
ctrlc = "3.4.6"
kanal = "0.1.1"
listen-new-proc = { git = "https://github.com/RustyStarX/fitgirl-ecoqos", version = "0.1.0" }
spdlog-rs = "0.4.2"
tokio = { version = "1.44.2", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
win32-ecoqos = "0.5.0"
windows = { version = "0.61", features = [
    # UI event hook
    "Win32_UI_Accessibility",
    # foreground event id, enter event loop
    "Win32_UI_WindowsAndMessaging",
    # enable SeDebugPrivilege for SYSTEM processes
    "Win32_Security",
] }

[build-dependencies]
windows_exe_info = "0.5.2"

[[bin]]
name = "RustyStar"
path = "./src/main.rs"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
